fixed git issue and removed word wrap css comments

--- a/style.css
+++ b/style.css
@@ -479,7 +479,6 @@ a:visited {
 	overflow: hidden;
 	position: absolute !important;
 	width: 1px;
-	/*wordwrap used to be here*/
 }
 
 /*--------------------------------------------------------------
@@ -1537,7 +1536,6 @@ img#wpstats {
 	clear: both;
 	padding-top: 1em;
 	padding-bottom: 1em;
-	/*wordwrap used to be here*/
 }
 
 .entry-content::after,
@@ -1625,21 +1623,10 @@ h1.entry-title {
 	margin: -3vh -50vw;
 	font-weight: 400;
 	line-height: 1.3;
-<<<<<<< HEAD
-	/*wordwrap used to be here*/
 }
 
 .entry-title.singular-title {
 	padding-top: .5em;
-=======
-	word-wrap: break-word;
-	text-align: center;
-	text-transform: uppercase;
-	font-weight: bold;
-	letter-spacing: .4rem;
-	padding: 15vh 0vw;
-	background-color: #f5f5f7;
->>>>>>> master
 }
 
 .entry-title a {
@@ -3496,7 +3483,6 @@ a.staticslider-button + a.staticslider-button,
 	line-height: 1.3;
 	text-align: center;
 	text-transform: uppercase;
-	/*wordwrap used to be here*/
 	color: #FFF;
 	opacity: 0;
 	-webkit-transform: translateY(-50%);
@@ -4117,7 +4103,6 @@ a.comment-edit-link:hover {}
 	display: block;
 	float: none;
 	margin-bottom: 0.5em;
-	/*wordwrap used to be here*/
 }
 
 .widget-title {
@@ -4134,7 +4119,6 @@ a.comment-edit-link:hover {}
 .widget-area a:link,
 .widget-area a:visited {
 	text-decoration: none;
-	/*wordwrap used to be here*/
 }
 
 .widget-area a:active,
@@ -4494,7 +4478,6 @@ ul.cryout-wposts li:last-child {
 .cryout-wtab .tab-item-comment,
 .cryout-wposts .post-item-title {
 	margin: 5px 0;
-	/*wordwrap used to be here*/
 }
 
 .cryout-wposts .post-item-title {
@@ -5533,7 +5516,6 @@ body .jetpack-portfolio-shortcode,
 	line-height: 1.3;
 	text-align: center;
 	text-transform: uppercase;
-	/*wordwrap used to be here*/
 	color: #FFF;
 	opacity: 0;
 	-webkit-transform: translateY(-50%);
@@ -6503,7 +6485,6 @@ body.mobile .main {min-height:0;}
 	.cryout p a::after {
 		content: " (" attr(href) ")";
 		font-size: 80%;
-		/*wordwrap used to be here*/
 	}
 
 	.cryout .entry-title,
